[package]
name = "async-udp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "udp_server"
path = "src/udp_server.rs"

[[bin]]
name = "udp_client"
path = "src/udp_client.rs"

[dependencies]
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
glommio = "0.9"
monoio = "0.2.4"
